--- a/hackyeah2025_backend/requirements.txt
+++ b/hackyeah2025_backend/requirements.txt
@@ -13,7 +13,6 @@ hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 msgpack==1.1.1
-pillow==10.4.0
 psycopg2==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -25,11 +24,24 @@ redis==6.4.0
 service-identity==24.2.0
 setuptools==80.9.0
 sqlparse==0.5.3
-djangorestframework==3.15.2
-drf-spectacular==0.27.2
+
+djangorestframework==3.16.1
 djangorestframework-simplejwt==5.3.1
+drf-spectacular==0.28.0
+
 Twisted==25.5.0
 txaio==25.9.2
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 zope.interface==8.0.1
+django-cors-headers==4.9.0
+uritemplate==4.2.0
+PyJWT==2.10.1
+PyYAML==6.0.3
+referencing==0.36.2
+rest-framework-simplejwt==0.0.2
+rpds-py==0.27.1
+inflection==0.5.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+pillow==11.3.0
